--- a/BMI_calculator.html
+++ b/BMI_calculator.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI 지수 계산기</title>
+    <style>
+        body {
+          text-align: center;
+        }
+        button {
+          margin: 20px;
+          font-size: large;
+          background-color: brown;
+          color: white;
+        }
+      </style>
     <script src=""></script>
 </head>
 <body>
@@ -47,6 +58,9 @@
             } else {
                 category = "고도비만";
             }
+
+            const resultElement = document.getElementById("result_string");
+            resultElement.textContent = `당신의 BMI 지수는 ${bmi.toFixed(2)}이며, 현재 "${category}"입니다.`;
 
         };
     </script>
