스타일 추가

--- a/star_printer.html
+++ b/star_printer.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>별 출력기</title>
+    <style>
+        body {
+            text-align: center;
+        }
+        button {
+            font-size: large;
+            background-color: navy;
+            color: white;
+            border-radius: 15px;
+        }
+        div {
+            font-size: 120%;
+        }
+    </style>
 </head>
 <body>
     <h1>별을 피라미드 모양으로 쌓아줍니다</h1>
