--- a/Bulls_and_Cows.html
+++ b/Bulls_and_Cows.html
@@ -4,65 +4,96 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>숫자 야구 게임</title>
+    <style>
+        div {
+            text-align: center;
+            margin: 0 auto;
+        }
+    </style>
 </head>
 <body>
+    <!-- 아직 완벽하게 작동하지 않는다. 손 볼 구석이 많다. -->
     <div>
         <h1>숫자 야구 게임</h1>
         <p>게임 규칙</p>
     </div>
+    <div>
+        <h3>결과 박스</h3>
+        <input type="text" id="insert_num" placeholder="4자리 랜덤 숫자" onkeyup="playerNums()"/>
+        <p id="result_string"></p>
+    </div>
 </body>
 <script>
-    // 랜덤한 숫자 생성
-    function randNumsGen() {
-        const right_nums = [];
+    window.onload = function() {
+        // 랜덤한 숫자 생성
+        function randNumsGen() {
+            const right_nums = [];
 
-        for(let i =0; i < 4; i++){
-            let new_num;
+            for(let i =0; i < 4; i++){
+                let new_num;
 
-            do {
-                new_num = Math.floor(Math.random() * 10);
-            } while (right_nums.includes(new_num));
+                do {
+                    new_num = Math.floor(Math.random() * 10);
+                } while (right_nums.includes(new_num));
 
-            right_nums.push(new_num);
+                right_nums.push(new_num);
+            };
+
+            return right_nums;
         };
 
-        return right_nums;
-    };
+        // 플레이어에게 숫자 입력 받기
+        function playerNums() {
+            while (true) {
+                const inputString = document.getElementById('insert_num').value;
 
-    // 플레이어에게 숫자 입력 받기
-    function playerNums() {
+                if (inputString.length !== 4 || new Set(inputString).size !== 4) {
+                    alert("4자리의 중복되지 않은 숫자를 입력해주세요.");
+                    return;
+                }
+
+                const playerNums = Array.from(inputString, (digit) => parseInt(digit, 10));
+
+                if (playerNums.some(isNaN)) {
+                    alert("입력 받은 수는 정수가 아닙니다.");
+                    return;
+                }
+
+                return playerNums;
+            };
+        };
+
+        // 검증용 함수
+        function validate(right_nums, playerNums){
+            const result = Array(4).fill('X');
+
+            for(let i = 0; i < 4; i++){
+                if (playerNums[i] === right_nums[i]){
+                    result[i] = 'S';
+                } else if (right_nums.includes(playerNums[i])) {
+                    result[i] = 'B';
+                };
+            };
+
+            return result;
+        };
+
+        // 실행
+        const com = randNumsGen()
+        let tries = 0;
+
         while (true) {
-            const inputString = prompt("4자리 숫자 입력 : ");
+            const userNums = playerNums();
+            const results = validate(com, userNums);
+            const resultString = results.join(' ');
+            document.getElementById("result_string").textContent += resultString;
 
-            if (inputString.length !== 4 || new Set(inputString).size !== 4){
-                alert("4자리의 중복되지 않은 숫자를 입력해주세요.");
-                continue;
-            }
-
-            const playerNums = Array.from(inputString, (digit) => parseInt(digit, 10));
-
-            if (playerNums.some(isNaN)) {
-                alert("입력 받은 수는 정수가 아닙니다.");
-                continue;
-            };
-
-            return playerNums;
-        };
-    };
-
-    // 검증용 함수
-    function validate(right_nums, playerNums){
-        const result = Array(4).fill('X');
-
-        for(let i = 0; i < 4; i++){
-            if (playerNums[i] === right_nums[i]){
-                result[i] = 'S';
-            } else if (right_nums.includes(playerNums[i])) {
-                result[i] = 'B';
+            if (results.every(result => result === 'S')){
+                break;
+            } else {
+                tries += 1;
             };
         };
-
-        return result;
     };
 </script>
 </html>
